@@ -1,3 +1,6 @@
+2009-01-31 Richard Dale <richard.j.dale@gmail.com>
+* The gitmodel example now works
+
 2009-01-29 Richard Dale <richard.j.dale@gmail.com>
 * The construct_copy() function wasn't working with class names containing 
 '::', which happens to be all of the classes in Wt::Ruby. Add some logging
